detail.html tooltip 수정, 무한스크롤 추가중